--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "core-js": "^2.6.5",
     "hammerjs": "^2.0.8",
     "jquery": "3.4.1",
+    "jwt-decode": "^2.2.0",
     "ng-event-bus": "^1.0.6",
     "ngx-google-places-autocomplete": "^2.0.4",
     "oidc-client": "^1.9.0",
